Some new changes
- lint project files
- adds about page
- adds LastPost component to link list
- improves blog page code

--- a/src/app/about/styles.module.css
+++ b/src/app/about/styles.module.css
@@ -11,6 +11,10 @@
   margin-top: 1rem;
 }
 
+.article ul {
+  margin: 0.5rem 0;
+}
+
 .article a {
   text-decoration-line: underline;
   text-underline-offset: 2px;
