--- a/src/app/blog/[slug]/styles.module.css
+++ b/src/app/blog/[slug]/styles.module.css
@@ -93,6 +93,17 @@
 .article ul {
   list-style-type: disc;
   text-align: left;
+  list-style-position: inside;
+}
+
+.article ol {
+  list-style-type: decimal;
+  margin: 1.5rem 0;
+  list-style-position: inside;
+}
+
+.article li + li {
+  margin-top: 0.5rem;
 }
 
 .article table {
@@ -108,4 +119,5 @@
   font-style: italic;
   padding: 0.6rem;
   border-left: 4px solid #665f6c;
+  margin: 1.5rem 0;
 }
